--- a/triad/src/main/res/values/strings.xml
+++ b/triad/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-  <string name="app_name">Screenplay</string>
+  <string name="app_name">Triad</string>
   <string name="title_activity_login">Sign in</string>
 
   <!-- Strings related to login -->
